--- a/src/main/resources/com/example/redactor/NodeLink.fxml
+++ b/src/main/resources/com/example/redactor/NodeLink.fxml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
 
-<fx:root fx:id="mainLayout" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root fx:id="mainLayout" type="VBox" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <VBox alignment="CENTER" prefWidth="88.0">
-            <children>
-                <Label fx:id="nodeLinkName" text="Nameadasdasd" />
-                <Circle fx:id="circleItem" centerX="3.5" centerY="3.5" fill="#1fffb2" radius="13.0" stroke="BLACK" strokeType="INSIDE" />
-            </children>
-        </VBox>
+          <Label fx:id="nodeLinkName" text="Nameadasdasd" />
+          <Circle fx:id="circleItem" centerX="3.5" centerY="3.5" fill="#1fffb2" radius="13.0" stroke="BLACK" strokeType="INSIDE">
+         <VBox.margin>
+            <Insets left="30.0" />
+         </VBox.margin>
+      </Circle>
     </children>
 </fx:root>
